[tool.poetry]
name = "helper-bot"
version = "0.1.0"
description = ""
authors = ["Slmpnv <slmpnv.code.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.16.1"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"
transformers = "^4.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
